--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
             font-size: 0.9em;
             color: #8b949e;
         }
+        header img {
+            width: 80%;
+            max-width: 1000px;
+            height: auto;
+            border-radius: 16px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+            margin-bottom: 20px;
+            cursor: pointer;
+        }
+
     </style>
 </head>
 
