--- a/index.html
+++ b/index.html
@@ -106,3 +106,20 @@
 
 </body>
 </html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--    <title>Live Canvas Editor</title>-->
+<!--    <style>-->
+<!--        body { text-align: center; margin-top: 50px; }-->
+<!--        canvas { border: 1px solid black; }-->
+<!--    </style>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1>Live Player Card Editor</h1>-->
+<!--<canvas id="playerCard" width="800" height="250"></canvas>-->
+<!--<script src="app.js"></script>-->
+<!--</body>-->
+<!--</html>-->
